--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install Newman and HTML Reporter
         run: |
           npm install -g newman
-          npm install -g newman-reporter-html
+          npm install -g newman-reporter-html --location=global
+          echo "NODE_PATH=$(npm root -g)" >> $env:GITHUB_ENV
 
       - name: Run Postman Collection
         run: |
